Bug 98831 - gtk3: Cannot copy paste between libreoffice documents
Summary: gtk3: Cannot copy paste between libreoffice documents
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.1.0.3 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.4
Keywords:
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2016-03-23 06:44 UTC by alium
Modified: 2016-10-25 07:39 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description alium 2016-03-23 06:44:11 UTC
I'd like to copy some text from one document into another, but when I click on paste, or press ctrl+v nothing happens. Works only Ctrl+Shift+V.

This happen with VCL GTK3 only, VCL GTK2 works normally and i can copy text. 

Bug reported in Archlinux too - https://bugs.archlinux.org/index.php?do=details&action=details.removevote&task_id=48632

Steps to reproduce:
Open two new documents (LO with GTK3 VCL), type some text than copy it, and try to paste it into the other document.
Comment 1 Buovjaga 2016-04-03 13:37:19 UTC
Works ok here (forced it with SAL_USE_VCLPLUGIN=gtk3).

64-bit, KDE Plasma 5
Build ID: 5.1.1.3 Arch Linux build-2
CPU Threads: 8; OS Version: Linux 4.4; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)

Arch Linux 64-bit, KDE Plasma 5
Version: 5.2.0.0.alpha0+
Build ID: 9b0069c2833313ba9fab91f45edd354ba334f94b
CPU Threads: 8; OS Version: Linux 4.4; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Built on April 3rd 2016
Comment 2 alium 2016-04-04 06:16:20 UTC
still does not work (for test I created a new user, so the basic setting off user account, forced it with SAL_USE_VCLPLUGIN = gtk3).

Arch Linux 64-bit, Cinnamon 2.8.7
LO: Build ID: 5.1.1.3 Arch Linux build-3, 
Kernel linux-4.5
Comment 3 Buovjaga 2016-04-04 08:35:13 UTC
NEW due to it being already confirmed in the Arch bug report.

I can't reproduce on Ubuntu either.

Version: 5.1.1.2
Build ID: 1:5.1.1~rc2-0ubuntu1~wily0
CPU Threads: 2; OS Version: Linux 4.2; UI Render: default; 
Locale: en-US (en_US.UTF-8)
Comment 4 alium 2016-04-09 22:22:07 UTC
it looks like the same problem - in Fedora

https://bugzilla.redhat.com/show_bug.cgi?id=1323922
Comment 5 Albert 2016-08-23 07:27:34 UTC
We have the same problem in Ubuntu 16.04 with latest updates.

Currently we have no solution.
   libreoffice-gtk3 installed - can't copy/paste between documents.
   libreoffice-gtk3 removed   - users complain that fonts are not smooth and thin, and the eyes quickly get tired.
   libreoffice-gtk installed  - strange bugs with the interface on relatively heavy files.

LibreOffice version: 1:5.1.4-0ubuntu1
Comment 6 Albert 2016-08-24 11:27:24 UTC
The problem is resolved by downgrading whole terminal server from Ubuntu 16.04 to 14.04.

The packages installed: libreoffice libreoffice-gtk

LibreOffice version: 1:4.2.8-0ubuntu4
Comment 7 Caolán McNamara 2016-10-18 13:24:52 UTC
Definitely works by now in 5.2 series in general. All the referenced rhbz issues are in master. I should probably backport all the remaining cnp work now it seems to have settled down.
Comment 8 Commit Notification 2016-10-25 07:39:55 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=92b5045a2895eeaddc839a2b40b7c9da625ef4af&h=libreoffice-5-2

Related: tdf#98831 backport gtk3 clipboard fixes

It will be available in 5.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.