Related: tdf#98831 backport gtk3 clipboard fixes

Resolves: rhbz#1326304 cannot detect loss of wayland clipboard ownership

gtk_clipboard_get_owner always returns what you set with
gtk_clipboard_set_with_owner and that doesn't change if some other
application takes over the clipboard

The "owner-change" signal doesn't contain any useful data under wayland,
and doesn't fire when you'd expect either, just when the app becomes
active or gets focus or something like that. So you get it when you
do have the clipboard and when you don't, so that's no use either to
detect loss of clipboard ownership

So, forget about clipboard ownership, and always take the data to
be pasted from the system clipboard, so when we are pasting from ourselves
its "paste"->m_aSystemContents->gtk->"copy"->m_aOurContents

Resolves: rhbz#1350478 identify that we own the selection with a unique target

so we can tell that we own the selection in the absence of reliable selection
ownership notifications under wayland

Note that gnome#768177 means that requests for CLIPBOARD targets after
requests for PRIMARY targets can time out, which is why my attempts at
doing this before giving up with

commit 88cd9dd591d7921e5bce33c170b457ae5aa871bb
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Fri Jun 24 15:06:36 2016 +0100

    Resolves: rhbz#1326304 cannot detect loss of wayland clipboard ownership

didn't work.

(cherry picked from commit 88f7aae022bedd61588424a11bbc033217ba4e43)

Resolves: rhbz#1352965 gtk3 infinite clipboard recursion with clipit installed

Related: rhbz#1351369 gtk3 clipboards have to live to end once created

like the other platforms do

Change-Id: I32f2e1a2cc3310687f61a094fdfa940fa0cfcc39
1154899e478b6e0cc6f70aa0c90c26663299072c
b67afaf532b8409e05fffbf1b8312d664460567d
31340254573d13dc808d1e3038e3a36ae97f6c22
d9c12b7ce6458348890d7c7ff7fdb2cd37c4601c
Related: rhbz#1362451 avoid recursive ownerchanged handling during ownerchange
Reviewed-on: https://gerrit.libreoffice.org/30019
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>